# esp32_ble_wifi

./: README.md  partitions.csv  sdkconfig  sdkconfig.old  token.txt
components/comp_ble/: CMakeLists.txt  comp_ble.c
components/comp_ble/include/: comp_ble.h
components/comp_imu/: CMakeLists.txt  esp32_i2c.c  eulersensor.c  jcc_IMU_lite.c  jcc_ellipse.c  jcc_ellipsoid.c
components/comp_imu/include/: esp32_i2c.h  eulersensor.h  jcc_IMU.h  jcc_ellipse.h  jcc_ellipsoid.h
components/comp_sdio/: CMakeLists.txt  comp_sdio.c
components/comp_sdio/include/: comp_sdio.h
components/comp_wifi/: CMakeLists.txt  comp_wifi.c
components/comp_wifi/include/: comp_wifi.h
components/user_ble/: CMakeLists.txt  user_ble.c
components/user_ble/include/: user_ble.h
components/user_gpio/: CMakeLists.txt  user_gpio.c
components/user_gpio/include/: user_gpio.h
components/user_sdio/: CMakeLists.txt  user_sdio.c
components/user_sdio/include/: user_sdio.h
components/user_wifi/: CMakeLists.txt  user_wifi.c
components/user_wifi/include/: user_wifi.h
main/: CMakeLists.txt  app_main.c  gattc_gatts_coex.c  key_task.c  key_task.h  ota_task.c  ota_task.h  simple_ota_example.c  spp_client_demo.c  tcp_server.c  uart_task.c  uart_task.h  wifi_task.c  wifi_task.h
